minio-helm-core/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  labels:
    istio-injection: enabled
    organization: platform-one
    product: minio
