minio-helm-core/resources/etcd-authorization.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: etcd-authorization
  namespace: foo
spec:
  selector:
    matchLabels:
      micro-svc: etcd
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/minio/sa/minio"]
